<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@drawable/background1"
    android:padding="10.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/mainContainer"
        android:visibility="visible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@id/search_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
            <EditText
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/searchCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/search" />
            <Button
                android:layout_gravity="center"
                android:id="@id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/topView"
                android:text="@string/search" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/addressContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_bar">
            <TextView
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/updateAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/overviewContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60.0dip"
            android:layout_below="@id/addressContainer">
            <TextView
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
            <TextView
                android:textSize="50sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
            <Space
                android:layout_width="fill_parent"
                android:layout_height="5.0dip" />
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:id="@+id/minTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
                <Space
                    android:layout_width="80.0dip"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/maxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
            <Space
                android:layout_width="fill_parent"
                android:layout_height="5.0dip" />
            <TextView android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/feeLike"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
        <Space
            android:id="@+id/space"
            android:layout_width="fill_parent"
            android:layout_height="10.0dip"
            android:layout_below="@id/overviewContainer" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/detailsContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.0">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/topView"
                    android:padding="10.0dip"
                    android:layout_width="95sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">
                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/sunriseIcon"
                        android:layout_width="30.0dip"
                        android:layout_height="30.0dip"
                        android:src="@drawable/sunrise"
                        app:tint="#ffffffff" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5.0dip" />
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise" />
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/sunriseTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
                <Space
                    android:layout_width="5.0dip"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/topView"
                    android:padding="10.0dip"
                    android:layout_width="95sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="30.0dip"
                        android:layout_height="30.0dip"
                        android:src="@drawable/sunset"
                        app:tint="#ffffffff" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5.0dip" />
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset" />
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/sunsetTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
                <Space
                    android:layout_width="5.0dip"
                    android:layout_height="wrap_content" />
                <LinearLayout android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/topView"
                    android:padding="10.0dip"
                    android:layout_width="109sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="30.0dip"
                        android:layout_height="30.0dip"
                        android:src="@drawable/wind"
                        app:tint="#ffffffff" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5.0dip" />
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind" />
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
                <Space
                    android:layout_width="5.0dip"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10.0dip" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.0">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/topView"
                    android:padding="10.0dip"
                    android:layout_width="95sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="30.0dip"
                        android:layout_height="30.0dip"
                        android:src="@drawable/pressure"
                        app:tint="#ffffffff" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5.0dip" />
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure" />
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
                <Space
                    android:layout_width="5.0dip"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/topView"
                    android:padding="10.0dip"
                    android:layout_width="95sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="30.0dip"
                        android:layout_height="30.0dip"
                        android:src="@drawable/humidity"
                        app:tint="#ffffffff" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5.0dip" />
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity" />
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
                <Space
                    android:layout_width="5.0dip"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/topView"
                    android:padding="10.0dip"
                    android:layout_width="109sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="30.0dip"
                        android:layout_height="30.0dip"
                        android:src="@drawable/info"
                        app:tint="#ffffffff" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5.0dip" />
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility" />
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
                <Space
                    android:layout_width="5.0dip"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    <TextView
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/errorMassage"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errorMassage"
        android:layout_centerInParent="true" />
</RelativeLayout>